--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,13 @@ body {
   background-color: var(--color-background);
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -125,12 +129,17 @@ header {
       -ms-flex-align: center;
           align-items: center;
   gap: 10px;
-  margin: 0 0 0 12px;
   padding: 10px 28px 10px 28px;
+  margin: 20px auto 0;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.8;
   letter-spacing: 0.06em;
+}
+@media screen and (min-width: 1200px) {
+  .submit-button {
+    margin: 0 0 0 12px;
+  }
 }
 
 /*кнопка що закриває модальне вікно*/
@@ -244,6 +253,15 @@ header {
   fill: transparent;
   margin: 0 7px 0 0;
 }
+.checkbox__text {
+  font-size: 12px;
+  font-weight: 400;
+}
+@media screen and (1200px) {
+  .checkbox__text {
+    font-size: 14px;
+  }
+}
 
 /* .checkbox-label{
     display: flex;
@@ -252,24 +270,19 @@ header {
 } */
 /*clients*/
 .clients {
-  width: 100%;
-}
-@media screen and (min-width: 1200px) {
-  .clients {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 30px;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 .clients__item {
-  width: calc((100% - 60px) / 2);
-  margin: 15px;
+  width: calc((100% - 30px) / 2);
 }
 @media screen and (min-width: 768px) {
   .clients__item {
     width: calc((100% - 90px) / 3);
-    margin: 15px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -295,6 +308,8 @@ header {
   border-radius: 4px;
   outline: none;
   fill: currentColor;
+  padding-top: 16px;
+  padding-bottom: 16px;
   /* outline: 1px solid red; */
   color: var(--color-icon);
   -webkit-transition: border var(--timing-function), color var(--timing-function);
@@ -307,16 +322,22 @@ header {
 
 /*footer*/
 .contacts-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    margin-bottom: 0;
+  }
 }
 
 .contacts-footer {
@@ -357,6 +378,11 @@ header {
 }
 @media (min-width: 768px) {
   .contacts-header {
+    display: block;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts-header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -380,6 +406,12 @@ header {
   -webkit-transition: color var(--timing-function);
   transition: color var(--timing-function);
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-header__link {
+    font-size: 12px;
+    padding: 5px 0;
+  }
+}
 .contacts-header__link:hover, .contacts-header__link:focus {
   color: var(--color-brand);
 }
@@ -387,6 +419,18 @@ header {
   margin-right: 10px;
   -webkit-transition: color var(--color-icon) var(--timing-function);
   transition: color var(--color-icon) var(--timing-function);
+}
+@media (min-width: 768px) {
+  .contacts-header__icon {
+    width: 14px;
+    height: 10px;
+  }
+}
+@media (min-width: 1200px) {
+  .contacts-header__icon {
+    width: auto;
+    height: auto;
+  }
 }
 .contacts-header__icon:hover, .contacts-header__icon:focus {
   fill: var(--color-brand);
@@ -449,17 +493,28 @@ header {
 }
 
 .socials {
-  margin-left: 93px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .socials {
+    margin: 0 0 0 93px;
+  }
 }
 .socials__title {
   color: var(--color-background);
   font-size: 14px;
   font-weight: 700;
   line-height: 1.1;
-  text-align: left;
+  text-align: center;
   margin-bottom: 20px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+@media screen and (min-width: 1200px) {
+  .socials__title {
+    text-align: left;
+  }
 }
 .socials__list {
   display: -webkit-box;
@@ -506,18 +561,99 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: var(--color-background);
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+  padding: 48px 40px;
 }
 .mobile-menu__close {
   position: absolute;
   top: 10px;
   right: 15px;
+  border: 0;
+  background-color: var(--color-background);
+  cursor: pointer;
+}
+.mobile-menu__list {
+  padding: 0;
+  margin-bottom: auto;
+  list-style: none;
+}
+.mobile-menu__link {
+  display: block;
+  color: var(--color-text-primary);
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-align: left;
+  text-decoration: none;
+  padding-bottom: 32px;
+  -webkit-transition: color var(--timing-function);
+  transition: color var(--timing-function);
+}
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--color-brand);
 }
 .mobile-menu.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu.is-open {
+    display: none;
+  }
+}
+
+.contacts-mobile {
+  margin-top: 274px;
+}
+.contacts-mobile__link {
+  display: block;
+  color: var(--color-text-secondary);
+  font-size: 34px;
+  font-weight: 500;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-align: left;
+  text-decoration: none;
+  padding-bottom: 32px;
+  -webkit-transition: color var(--timing-function);
+  transition: color var(--timing-function);
+}
+.contacts-mobile__link:hover, .contacts-mobile__link:focus {
+  color: var(--color-brand);
+}
+
+.socials-mobile {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  list-style: none;
+  margin-top: 64px;
+}
+.socials-mobile__item {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.socials-mobile__item:last-child {
+  border: none;
+}
+.socials-mobile__link {
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: var(--color-brand);
+  text-decoration: none;
+  margin-right: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 /*what are we doing*/
@@ -582,11 +718,26 @@ header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 30px;
   }
 }
 .advantages__list {
   padding: 15px;
+}
+@media (min-width: 768px) {
+  .advantages__list {
+    width: calc((100% - 90px) / 2);
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__list {
+    width: calc(25% - 22.5px);
+  }
 }
 .advantages__img {
   display: -webkit-box;
@@ -625,14 +776,48 @@ header {
 }
 
 .feedback-container {
+  text-align: center;
+  max-width: 480px;
+}
+@media screen and (min-width: 768px) {
+  .feedback-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feedback-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    text-align: left;
+    max-width: 1200px;
+  }
+}
+
+.header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-
 .header__nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -645,6 +830,15 @@ header {
   display: none;
 }
 @media screen and (min-width: 768px) {
+  .header__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 50px;
+    margin-left: 87px;
+  }
+}
+@media screen and (min-width: 1200px) {
   .header__menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -690,6 +884,8 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  background-color: transparent;
+  border: none;
 }
 @media screen and (min-width: 768px) {
   .header__burger {
@@ -699,50 +895,67 @@ header {
 
 .main {
   background-color: #2F303A;
-  padding: 200px 0;
-  max-width: 480px;
+  padding: 118px 0;
+  max-width: 100%;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/main_section_img.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/main_section_img.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
-@media (min-width: 767px) {
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .main {
+    background-image: url(../images/hero-desktop@2x.jpg);
+  }
+}
+@media screen and (1200px) {
+  .main {
+    padding: 200px 0;
     max-width: 1600px;
     height: 600px;
   }
 }
 .main__text {
   color: white;
-  font-size: 42px;
+  font-size: 26px;
   font-weight: 900;
   line-height: 1.6;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
-  max-width: 696px;
+  max-width: 360px;
   margin-right: auto;
   margin-left: auto;
 }
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .main__text {
     font-size: 44px;
-    line-height: 1.4;
+    max-width: 696px;
   }
 }
 
 /* Modal */
 .modal {
   position: absolute;
-  top: 50%;
+  top: 93px;
   left: 50%;
-  width: 528px;
-  height: 581px;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  max-width: 450px;
+  width: 100%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    top: 50%;
+    left: 50%;
+    max-width: 528px;
+    height: 581px;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
 }
 .modal__container {
   position: relative;
@@ -843,41 +1056,40 @@ header {
 .team {
   background-color: #f5f4fa;
 }
-.team__list {
-  display: block;
-  width: 100%;
-}
 @media (min-width: 768px) {
   .team__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     gap: 30px;
   }
 }
+@media (min-width: 1200px) {
+  .team__list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
 .team__item {
   background-color: var(--color-background);
-  /* flex-basis: calc(100% / 3 - var(--projects-set-gap)); */
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  display: block;
-  width: 100%;
   margin: 15px;
 }
 @media (min-width: 768px) {
   .team__item {
-    -ms-flex-preferred-size: calc((100% - 60px) / 2);
-        flex-basis: calc((100% - 60px) / 2);
+    width: calc((100% - 90px) / 2);
   }
 }
 @media (min-width: 1200px) {
   .team__item {
-    -ms-flex-preferred-size: calc((100% - 60px) / 3);
-        flex-basis: calc((100% - 60px) / 3);
+    width: calc(25% - 22.5px);
   }
 }
 
@@ -940,13 +1152,15 @@ footer {
   padding-bottom: 60px;
 }
 
-.form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (min-width: 1200px) {
+  .form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 .form__icon {
   width: 24px;
@@ -956,6 +1170,7 @@ footer {
 }
 .form__input {
   width: 100%;
+  height: 50px;
   padding: 15px 16px;
   letter-spacing: 0.03em;
   border-radius: 4px;
@@ -965,6 +1180,16 @@ footer {
   background-color: #2f303a;
   color: rgba(255, 255, 255, 0.6);
   outline: none;
+}
+@media screen and (min-width: 768px) {
+  .form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form__input {
+    width: 358px;
+  }
 }
 .form__input::-webkit-input-placeholder {
   font-size: 16px;
@@ -998,19 +1223,25 @@ footer {
 }
 
 /*footer-form*/
-.feedback {
-  margin-left: 93px;
+@media screen and (min-width: 1200px) {
+  .feedback {
+    margin-left: 93px;
+  }
 }
 .feedback__title {
   color: var(--color-background);
   font-size: 14px;
   font-weight: 700;
   line-height: 1.1;
-  text-align: left;
-  /* margin-left: 93px; */
+  text-align: center;
   margin-bottom: 20px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+@media screen and (min-width: 1200px) {
+  .feedback__title {
+    text-align: left;
+  }
 }
 
 /*Form modal*/
