--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,9 +12,13 @@ body {
     background-color: var(--color-background);
 }
 
+body.modal-open{
+    overflow: hidden;
+}
+
 img {
     display: block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
