--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -28,13 +28,18 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    margin:0 0 0 12px;
-    padding: 10px 28px 10px 28px;    
+    
+    padding: 10px 28px 10px 28px;
+    margin: 20px auto 0;    
 
     font-size: 16px;
     font-weight: 700;
     line-height: 1.8;
     letter-spacing: 0.06em;
+
+    @media screen and (min-width: $bp-desktop) {
+        margin:0 0 0 12px;
+    }
 }
 
 /*кнопка що закриває модальне вікно*/
