--- a/sass/components/_contacts-header.scss
+++ b/sass/components/_contacts-header.scss
@@ -2,6 +2,12 @@
     display: none;
 
     @media (min-width: $bp-tablet) {
+        display: block;
+        
+
+    }
+
+    @media (min-width: $bp-desktop) {
         display: flex;
         gap: 30px; 
     }
@@ -14,11 +20,17 @@
         font-weight: 500;
         letter-spacing: 0.02em;
         text-decoration: none;
-        // margin-right: 50px;
+        
         padding: 32px 0;
         
         fill: currentColor;
         transition: color var(--timing-function);
+
+        @media screen and (min-width: $bp-tablet) 
+        and (max-width: 1199px) {
+            font-size: 12px;
+            padding: 5px 0;
+        }
 
         &:hover, 
         &:focus {
@@ -29,6 +41,16 @@
     &__icon {
         margin-right: 10px;
         transition: color var(--color-icon) var(--timing-function);
+
+        @media (min-width: $bp-tablet) {
+            width: 14px;
+            height: 10px;
+        }
+
+        @media (min-width: $bp-desktop) {
+            width: auto; 
+            height: auto;
+        }
 
         &:hover, 
         &:focus {
