--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,9 +1,14 @@
 /*footer*/
 
 .contacts-block {
-    display: flex;
-    flex-direction: column;
-    align-items: baseline; 
+    margin-bottom: 60px;
+
+    @media screen and (min-width: $bp-desktop) {
+        display: flex;
+        flex-direction: column;
+        align-items: baseline; 
+        margin-bottom: 0;
+    }
 }
 
 
