--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -2,21 +2,113 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
+    // padding: 32px;
     background-color: var(--color-background);
-    // transform: translateX(100%);
-    // transition: transform 500ms;
+    z-index: 999;
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+
+    padding: 48px 40px;
 
     &__close{
         position: absolute;
        
         top: 10px;
         right: 15px;
+
+        border: 0;
+        background-color: var(--color-background);
+        cursor: pointer;
+    }
+
+    &__list{
+        padding: 0;
+        margin-bottom: auto;
+        list-style: none;
+    }
+
+    &__link{
+        display: block;
+        color: var(--color-text-primary);
+        font-size: 40px;
+        font-weight: 500;
+    
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        text-align: left;
+        text-decoration: none;
+        padding-bottom: 32px;
+        transition: color var(--timing-function);
+        
+        &:hover, 
+        &:focus{
+            color: var(--color-brand);
+        }
     }
 
     &.is-open{
-    transform: translateX(0);
+        transform: translateX(0);
+
+        @media screen and (min-width: $bp-tablet) {
+            display: none;
+        }
     }
 }
+
+.contacts-mobile{
+    margin-top: 274px;
+
+    &__link{
+        display: block;
+        color: var(--color-text-secondary);
+        font-size: 34px;
+        font-weight: 500;
+    
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        text-align: left;
+        text-decoration: none;
+
+        padding-bottom: 32px;
+        transition: color var(--timing-function);
+        
+        &:hover,
+        &:focus {
+            color: var(--color-brand);
+        }
+    }
+}
+
+
+.socials-mobile{
+    display: inline-flex;
+    list-style: none;
+    
+    margin-top: 64px;
+
+    &__item{
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+        
+        &:last-child {
+            border: none;
+        }
+    }
+    
+    &__link{
+        font-size: 18px;
+        font-weight: 500;
+        letter-spacing: 0.02em;
+        color: var(--color-brand);
+        text-decoration: none;
+
+        margin-right: 10px;
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+
+   
+}
+   
 
