--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,17 +1,26 @@
 .socials {
-    margin-left: 93px;
-    
+    margin-top: 60px;
+    margin-bottom: 60px;
+
+    @media screen and (min-width: $bp-desktop) {
+       margin: 0 0 0 93px;
+    }
+
     &__title {
         color: var(--color-background);
         font-size: 14px;
         font-weight: 700;
         line-height: 1.1;
-        text-align: left;
+        text-align: center;
         
         margin-bottom: 20px;
         
         letter-spacing: 0.03em;
         text-transform: uppercase;
+
+        @media screen and (min-width: $bp-desktop) {
+            text-align: left;
+        }
     }
 
     &__list {
