--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,5 +1,22 @@
 
 .feedback-container {
-    display: flex;
-    align-items: baseline;
+    text-align: center;
+    max-width: 480px;
+
+    @media screen and (min-width: $bp-tablet) {
+        
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: baseline;
+        max-width: 768px;
+        
+    }
+
+    @media screen and (min-width: $bp-desktop) {
+        display: flex;
+        align-items: baseline;
+        text-align: left;
+        max-width: 1200px;
+    }
 }
