--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,18 +1,10 @@
 .header {
-    // border-bottom: 1px solid #ececec;
-    // min-width: 480px;
-    // // display: flex;
-    // // justify-content: space-between;
-    // // align-items: center;
-
-    // @media screen and (min-width: $bp-tablet){
-    //     min-width: 768px;
-    // }
-
-    // @media screen and (min-width: $bp-desktop){
-    //     min-width: 1200px;
-    // }
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
     
+    
+
     &__nav {
         display: flex;
         align-items: center;
@@ -22,6 +14,12 @@
         display: none;
 
         @media screen and (min-width: $bp-tablet) {
+            display: flex;
+            gap: 50px;
+            margin-left: 87px; 
+        }
+
+        @media screen and (min-width: $bp-desktop) {
             display: flex;
             gap: 50px;
             margin-left: 108px; 
@@ -67,6 +65,8 @@
     &__burger{
         display: flex;
         justify-content: space-between;
+        background-color: transparent;
+        border: none;
 
         @media screen and (min-width: $bp-tablet) {
             display: none;
