--- a/sass/layout/_hero-section.scss
+++ b/sass/layout/_hero-section.scss
@@ -1,7 +1,7 @@
 .main {
     background-color: #2F303A;
-    padding: 200px 0;
-    max-width: 480px;
+    padding: 118px 0;
+    max-width: 100%;
     height: 400px;
     margin-left: auto;
     margin-right: auto;
@@ -9,30 +9,38 @@
     background-image: linear-gradient( to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main_section_img.jpg);
+    url(../images/hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 
-    @media (min-width: 767px) {
+    @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+        background-image: url(../images/hero-desktop@2x.jpg);
+    }
+
+    @media screen and ($bp-desktop) {
+        padding: 200px 0;
         max-width: 1600px;
         height: 600px;
     }
 
     &__text {
         color: #ffff;
-        font-size: 42px;
+        font-size: 26px;
         font-weight: 900;
         line-height: 1.6;
+        letter-spacing: 0.06em;
         text-transform: uppercase;
         text-align: center;
-        max-width: 696px;
+        max-width: 360px;
         margin-right: auto;
         margin-left: auto;
 
-        @media (min-width: $bp-tablet) {
-            font-size: 44px; 
-            line-height: 1.4;
+        @media (min-width: $bp-desktop) {
+            font-size: 44px;
+            max-width: 696px;
         }
     }
 }
