--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -1,13 +1,23 @@
 /* Modal */
 
-.modal{
+.modal {
     position: absolute;
-    top: 50%;
+    top: 93px;
     left: 50%;
-    width: 528px;
-    height: 581px;
-    transform: translate(-50%, -50%);
+    max-width: 450px;
+    width: 100%;
+    // height: 609px;
+    transform: translate(-50%);
 
+    @media screen and (min-width: $bp-desktop) {
+        top: 50%;
+        left: 50%;
+        max-width: 528px;
+        height: 581px;
+        transform: translate(-50%, -50%);
+    }
+    
+    
     &__container{
         position: relative;
     
