--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -2,38 +2,39 @@
 
 .team {
     background-color: #f5f4fa ;
-    
 
     &__list {
-        display: block;
-        width: 100%;
 
         @media (min-width: $bp-tablet){
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             gap: 30px;
+    
+        }
+
+        @media (min-width: $bp-desktop){
+            flex-wrap: nowrap;
         }
     }
     
     &__item {
         background-color: var(--color-background);
-        /* flex-basis: calc(100% / 3 - var(--projects-set-gap)); */
+        
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
         0px 1px 1px rgba(0, 0, 0, 0.14), 
         0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
     
-        display: block;
-        width: 100%;
+        
         margin: 15px;
 
         @media (min-width: $bp-tablet) {
-            flex-basis: calc((100% - 60px) / 2);
+            width: calc((100% - 6 * 15px) / 2);
         }
 
         @media (min-width: $bp-desktop) {
-            flex-basis: calc((100% - 60px) / 3);
-            // width: calc(100%/4 - 30px/4*3);
+            width: calc(100%/4 - 30px/4*3);
         }
     }
 }
