--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -20,11 +20,11 @@
         margin: 9px 0 9px 0;
 
         &:first-child{
-            margin-top: 0;
+            margin: 0;
         }
 
         &:last-child{
-            margin-bottom: 0;
+            margin: 0;
         }
     }
 }
