--- a/sass/layout/_team-section.scss
+++ b/sass/layout/_team-section.scss
@@ -5,7 +5,7 @@
 
     &__list {
 
-        @media (min-width: $bp-tablet){
+        @media screen and (min-width: $bp-tablet){
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -13,7 +13,7 @@
     
         }
 
-        @media (min-width: $bp-desktop){
+        @media screen and (min-width: $bp-desktop){
             flex-wrap: nowrap;
         }
     }
@@ -25,16 +25,41 @@
         0px 1px 1px rgba(0, 0, 0, 0.14), 
         0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
-    
-        
-        margin: 15px;
 
-        @media (min-width: $bp-tablet) {
-            width: calc((100% - 6 * 15px) / 2);
+        max-width: 450px;
+        margin-left: auto;
+        margin-right: auto;
+
+        @media screen and (max-width: 767px){
+
+            &:not(:last-child) {
+                margin-bottom: 30px;
+            }
         }
 
-        @media (min-width: $bp-desktop) {
+        @media screen and (min-width: $bp-tablet) {
+           
+            width: calc((100% - 6 * 15px) / 2);
+            max-width: 354px;
+        }
+
+        @media screen and (min-width: $bp-desktop) {
             width: calc(100%/4 - 30px/4*3);
+        }
+    }
+
+    &__img{
+        width: 100%;
+        max-width: 450px;
+        height: 100%;
+        
+        @media screen and (min-width: $bp-tablet){
+            max-width: 354px;
+            height: auto;
+        }
+
+        @media screen and (min-width: $bp-desktop){
+            max-width: 270px;
         }
     }
 }
@@ -73,7 +98,7 @@
         justify-content: center;
         width: 44px;
         height: 44px;
-        /* background-color: var(--color-background); */
+        // /* background-color: var(--color-background); */
         fill: currentColor;
         border-radius: 50%;
         
