--- a/css/main.css
+++ b/css/main.css
@@ -101,8 +101,7 @@ header {
 }
 
 .button {
-  display: block;
-  margin: 30px auto;
+  margin-top: 30px;
   padding: 10px 32px 10px 32px;
   color: white;
   background-color: #2196f3;
@@ -348,10 +347,10 @@ header {
   margin: 9px 0 9px 0;
 }
 .contacts-footer__element:first-child {
-  margin-top: 0;
+  margin: 0;
 }
 .contacts-footer__element:last-child {
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .map {
@@ -421,7 +420,13 @@ header {
   transition: color var(--color-icon) var(--timing-function);
 }
 @media (min-width: 768px) {
-  .contacts-header__icon {
+  .contacts-header__icon--vertical {
+    width: 10px;
+    height: 14px;
+  }
+}
+@media (min-width: 768px) {
+  .contacts-header__icon--horizontal {
     width: 14px;
     height: 10px;
   }
@@ -493,7 +498,6 @@ header {
 }
 
 .socials {
-  margin-top: 60px;
   margin-bottom: 60px;
 }
 @media screen and (min-width: 1200px) {
@@ -586,20 +590,28 @@ header {
   margin-bottom: auto;
   list-style: none;
 }
+.mobile-menu__item {
+  padding-bottom: 32px;
+}
+.mobile-menu__item:last-child {
+  padding-bottom: 0;
+}
 .mobile-menu__link {
   display: block;
   color: var(--color-text-primary);
-  font-size: 40px;
+  font-size: 34px;
   font-weight: 500;
   line-height: 1.1;
   letter-spacing: 0.02em;
   text-align: left;
   text-decoration: none;
-  padding-bottom: 32px;
   -webkit-transition: color var(--timing-function);
   transition: color var(--timing-function);
 }
 .mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--color-brand);
+}
+.mobile-menu__link--current {
   color: var(--color-brand);
 }
 .mobile-menu.is-open {
@@ -614,10 +626,12 @@ header {
 
 .contacts-mobile {
   margin-top: 274px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.contacts-mobile__link {
+.contacts-mobile__tel {
   display: block;
-  color: var(--color-text-secondary);
+  color: var(--color-brand);
   font-size: 34px;
   font-weight: 500;
   line-height: 1.1;
@@ -628,7 +642,20 @@ header {
   -webkit-transition: color var(--timing-function);
   transition: color var(--timing-function);
 }
-.contacts-mobile__link:hover, .contacts-mobile__link:focus {
+.contacts-mobile__mail {
+  display: block;
+  color: var(--color-text-secondary);
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-align: left;
+  text-decoration: none;
+  padding-bottom: 32px;
+  -webkit-transition: color var(--timing-function);
+  transition: color var(--timing-function);
+}
+.contacts-mobile__mail:hover, .contacts-mobile__mail:focus {
   color: var(--color-brand);
 }
 
@@ -641,9 +668,16 @@ header {
 }
 .socials-mobile__item {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-left: 10px;
+}
+.socials-mobile__item:first-child {
+  padding-left: 0;
 }
 .socials-mobile__item:last-child {
   border: none;
+}
+.socials-mobile__item:not(:last-child) {
+  padding-right: 10px;
 }
 .socials-mobile__link {
   font-size: 18px;
@@ -651,9 +685,11 @@ header {
   letter-spacing: 0.02em;
   color: var(--color-brand);
   text-decoration: none;
-  margin-right: 10px;
-  padding-right: 10px;
-  padding-left: 10px;
+}
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .socials-mobile__link {
+    font-size: 12px;
+  }
 }
 
 /*what are we doing*/
@@ -727,11 +763,20 @@ header {
   }
 }
 .advantages__list {
-  padding: 15px;
+  max-width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.advantages__list:not(:last-child) {
+  margin-bottom: 30px;
 }
 @media (min-width: 768px) {
   .advantages__list {
     width: calc((100% - 90px) / 2);
+    max-width: 354px;
+  }
+  .advantages__list:not(:last-child) {
+    margin-bottom: 0px;
   }
 }
 @media (min-width: 1200px) {
@@ -896,26 +941,29 @@ header {
 .main {
   background-color: #2F303A;
   padding: 118px 0;
-  max-width: 100%;
+  max-width: 1600px;
+  width: 100%;
   height: 400px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
-@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
-  .main {
-    background-image: url(../images/hero-desktop@2x.jpg);
-  }
-}
-@media screen and (1200px) {
+@media screen and (min-width: 1200px) {
   .main {
     padding: 200px 0;
     max-width: 1600px;
     height: 600px;
+  }
+}
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .main {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-desktop@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-desktop@2x.jpg);
   }
 }
 .main__text {
@@ -1056,7 +1104,7 @@ header {
 .team {
   background-color: #f5f4fa;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .team__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1069,7 +1117,7 @@ header {
     gap: 30px;
   }
 }
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .team__list {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
@@ -1080,16 +1128,40 @@ header {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin: 15px;
+  max-width: 450px;
+  margin-left: auto;
+  margin-right: auto;
 }
-@media (min-width: 768px) {
-  .team__item {
-    width: calc((100% - 90px) / 2);
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
-@media (min-width: 1200px) {
+@media screen and (min-width: 768px) {
+  .team__item {
+    width: calc((100% - 90px) / 2);
+    max-width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
   .team__item {
     width: calc(25% - 22.5px);
+  }
+}
+.team__img {
+  width: 100%;
+  max-width: 450px;
+  height: 100%;
+}
+@media screen and (min-width: 768px) {
+  .team__img {
+    max-width: 354px;
+    height: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__img {
+    max-width: 270px;
   }
 }
 
@@ -1133,7 +1205,6 @@ header {
           justify-content: center;
   width: 44px;
   height: 44px;
-  /* background-color: var(--color-background); */
   fill: currentColor;
   border-radius: 50%;
   color: var(--color-icon);
