--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,6 +1,6 @@
 .button {
-    display: block;
-    margin: 30px auto;
+    // display: block;
+    margin-top: 30px;
     padding: 10px 32px 10px 32px;
 
     color: #ffff;
