--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -29,21 +29,33 @@
         list-style: none;
     }
 
+    &__item{
+        padding-bottom: 32px;
+
+        &:last-child {
+            padding-bottom: 0;
+        }
+    }
+
     &__link{
         display: block;
         color: var(--color-text-primary);
-        font-size: 40px;
+        font-size: 34px;
         font-weight: 500;
     
         line-height: 1.1;
         letter-spacing: 0.02em;
         text-align: left;
         text-decoration: none;
-        padding-bottom: 32px;
+        
         transition: color var(--timing-function);
         
         &:hover, 
         &:focus{
+            color: var(--color-brand);
+        }
+
+        &--current{
             color: var(--color-brand);
         }
     }
@@ -59,10 +71,12 @@
 
 .contacts-mobile{
     margin-top: 274px;
+    margin-left: auto;
+    margin-right: auto;
 
-    &__link{
+    &__tel{
         display: block;
-        color: var(--color-text-secondary);
+        color: var(--color-brand);
         font-size: 34px;
         font-weight: 500;
     
@@ -73,7 +87,22 @@
 
         padding-bottom: 32px;
         transition: color var(--timing-function);
-        
+    }
+
+    &__mail {
+        display: block;
+        color: var(--color-text-secondary);
+        font-size: 24px;
+        font-weight: 500;
+
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        text-align: left;
+        text-decoration: none;
+
+        padding-bottom: 32px;
+        transition: color var(--timing-function);
+
         &:hover,
         &:focus {
             color: var(--color-brand);
@@ -90,9 +119,18 @@
 
     &__item{
         border-right: 1px solid rgba(33, 33, 33, 0.2);
+        padding-left: 10px;
+
+        &:first-child{
+            padding-left: 0;
+        }
         
         &:last-child {
             border: none;
+        }
+
+        &:not(:last-child) {
+            padding-right: 10px;
         }
     }
     
@@ -102,10 +140,11 @@
         letter-spacing: 0.02em;
         color: var(--color-brand);
         text-decoration: none;
+        
+        @media screen and (min-width: 320px) and (max-width: 479px) {
+            font-size: 12px;
+        }
 
-        margin-right: 10px;
-        padding-right: 10px;
-        padding-left: 10px;
     }
 
    
