--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,5 +1,5 @@
 .socials {
-    margin-top: 60px;
+    // margin-top: 60px;
     margin-bottom: 60px;
 
     @media screen and (min-width: $bp-desktop) {
