--- a/sass/layout/_hero-section.scss
+++ b/sass/layout/_hero-section.scss
@@ -1,10 +1,12 @@
 .main {
     background-color: #2F303A;
     padding: 118px 0;
-    max-width: 100%;
+    max-width: 1600px;
+    width: 100%;
     height: 400px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
     
     background-image: linear-gradient( to right,
     rgba(47, 48, 58, 0.4),
@@ -14,17 +16,22 @@
     background-position: center;
     background-size: cover;
 
-    @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-        background-image: url(../images/hero-desktop@2x.jpg);
-    }
-
-    @media screen and ($bp-desktop) {
+    @media screen and (min-width: $bp-desktop) {
         padding: 200px 0;
         max-width: 1600px;
         height: 600px;
     }
+
+    @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+        url(../images/hero-desktop@2x.jpg);
+    }
+
+  
 
     &__text {
         color: #ffff;
